# vesselbridge3d

./: .gitignore  LICENSE  README.md  config_utils.py  inference.py  pyproject.toml  requirements.txt  train.py
configs/: inference_3d_default.yaml  inference_3d_medgemma.yaml  inference_3d_medsam.yaml  train_3d_default.yaml  train_3d_medgemma.yaml  train_3d_medsam.yaml
vesselbridge3d/: __init__.py  cli.py  inference.py  losses.py  train.py  utils.py
vesselbridge3d/common/: __init__.py  constants.py
vesselbridge3d/data/: __init__.py  class_stats.py  collate.py  dataset.py  preprocess.py
vesselbridge3d/engine/: __init__.py  checkpoint.py  inference.py  losses.py  train_loop.py
vesselbridge3d/models/: __init__.py  adapter3d.py  attention.py  blocks.py  decoder.py  dinov3_unetr.py  encoders.py  heads.py  medgemma_unetr.py  medsam_unetr.py  seg3d_base.py
