[project]
name = "vesselbridge3d"
version = "0.1.0"
description = "Robust Few-Shot 3D Vessel Segmentation using Foundation Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.57.3",
    "nibabel==5.3.3",
    "numpy==2.2.6",
    "imageio==2.37.2",
    "tqdm==4.67.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
